Fix calendar table cell spacing.

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -128,6 +128,7 @@ table tr:hover {
 /* Rounded corners on tables */
 table {
 	border-collapse: separate;
+	border-spacing: 0;
 }
 
 table tr:first-child td:first-child, table tr:first-child th:first-child {
